# Host

./: .clang-format  .gitignore  CMakeLists.txt  Hosihikari.Host.sln  Hosihikari.Preload.sln  README.md  tooth.json  xmake.lua
.github/workflows/: build.yml  cmake.yml  release.yml
include/: dotnet.h  main.h
lib/nethost/: apphost  nethost.lib
src/: DllMain.cpp  Hosihikari.Host.vcxproj  Hosihikari.Preload.vcxproj  Hosihikari.Preload.vcxproj.filters  Plugin.cpp  dotnet.c  dotnet.cpp  dotnet.h  main.c  main.cpp  main.h
src/hosihikari_host/: HosihikariHost.cpp  HosihikariHost.h
src/hosihikari_preload/: Entry.cpp  Entry.h
src/plugin/: HosihikariPlugin.cpp  HosihikariPlugin.h  HosihikariPluginManager.cpp  HosihikariPluginManager.h  PluginHandle.cpp  PluginHandle.h
